# rag_chunk_strategy

./: .env.example  .gitignore  LICENSE  README.md  chunk_api.py  llm_providers_models.json  main.py  main_parse.py  main_retrieval.py  main_vstore.py  pyproject.toml  retrieval_api.py
chunk_lab/: __init__.py  base.py  cli.py  config.py  db.py  evaluator.py  llm_judge.py  models.py  observability.py  pipeline.py  qa_generator.py  qa_store.py  rag_chat.py  registry.py  settings_schema.py  settings_store.py  stats.py  types.py  utils.py  vectorstore.py
chunk_lab/datasources/: __init__.py  arxiv_client.py  corpus.py  local_dir.py  references_catalog.py
chunk_lab/routers/: __init__.py  parse_lab.py  retrieval_lab.py  vstore_lab.py
chunk_lab/strategies/: __init__.py  baseline.py  contextual.py  fixed.py  metadata.py  multi_granularity.py  parent_child.py  proposition.py  semantic.py
data/: papers_qa.json  references_catalog.json  sample.txt  sample_qa.json
data/experiments/: retrieval_qa.json
docs/: RAG_Chunk_参考文献.md  experiments.md
parse_lab/: __init__.py  base.py  cli.py  metrics.py  pipeline.py  registry.py  source_preview.py  types.py
parse_lab/ocr/: __init__.py  api.py  config.py  engine.py  local.py  prompts.py
parse_lab/ocr/providers/: __init__.py  azure.py  (+4 more)
parse_lab/parsers/: __init__.py  _utils.py  docx_parsers.py  ocr_parsers.py  pdf_parsers.py  vlm_parsers.py
parse_lab/vlm/: __init__.py  client.py  context.py  page_render.py  prompts.py
retrieval_lab/: __init__.py  base.py  bm25_index.py  cli.py  metrics.py  pipeline.py  registry.py  rrf.py  strategies.py  types.py
vstore_lab/: __init__.py  benchmark.py  cli.py  types.py
