[project]
name = "rag-chunk-strategy"
version = "0.1.0"
description = "LangChain dynamic chunk strategy comparison lab"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "langchain-classic>=1.0.7",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "tiktoken>=0.13.0",
    "sentence-transformers>=5.5.1",
    "httpx>=0.28.1",
    "pypdf>=6.11.0",
    "faiss-cpu>=1.13.2",
    "langchain-mistralai>=1.1.4",
    "qdrant-client>=1.18.0",
    "pymilvus>=3.0.0",
    "dashscope>=1.25.18",
    "langchain-pinecone>=0.2.13",
    "langfuse>=4.6.1",
    "langsmith>=0.8.5",
    "python-multipart>=0.0.29",
    "docx2txt>=0.8",
    "openpyxl>=3.1.0",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1.0",
    "mammoth>=1.9.0",
    "pytesseract>=0.3.13",
    "pillow>=10.1.0",
    "rank-bm25>=0.2.2",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
parse-heavy = ["docling>=2.0.0"]
parse-ocr = ["rapidocr>=3.0.0"]
marker = ["marker-pdf>=1.0.0"]

[project.scripts]
chunk-lab = "chunk_lab.cli:main"
parse-lab = "parse_lab.cli:main"
retrieval-lab = "retrieval_lab.cli:main"
vstore-lab = "vstore_lab.cli:main"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple" 
default = true
